--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
                 starttls:
                     required: true
                     enable: true
-    username: gvprogramacion@gmail.com
-    password: cvqnwbpuntixrcnz
+    username: disneylogin22@gmail.com
+    password: LeonardoPadura
   datasource: 
     url: jdbc:mysql://localhost:3306/disney?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
     username: root
