[16/02/2024] - Cleaning before moving to springboot 3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,9 @@ spring:
         http-only: true
       tracking-modes:
       - cookie
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
  
       
           
