--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,10 @@ spring:
         http-only: true
       tracking-modes:
       - cookie
+  mvc:
+      pathmatch:
+        matching-strategy: ant_path_matcher
+
  
       
           
